@@ -1,6 +1,7 @@
 == Changelog ==
 
 = 0.5.3 =
+* Enhanced: field types now accept any kind of data attributes
 * Fixed: posts and terms dropdown options now properly handle an empty value
 * Fixed: textarea field will render as a text field inside a repeatable
 
